--- a/CompareDistanceMatrices.ipynb
+++ b/CompareDistanceMatrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c207ec48",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,13 @@
     "import comparingTrees\n",
     "import time\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from ete3 import Tree as RF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7744336",
    "metadata": {},
    "outputs": [],
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "543bb39a",
    "metadata": {},
    "outputs": [],
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def elt_wise_abs_error(X, Y):\n",
@@ -219,7 +220,7 @@
     "            if i != j:\n",
     "                if finalDistMat[i][j] == 0.0:\n",
     "                    finalDistMat[i][j] += average\n",
-    "\n",
+    "    # ourTree = makingFinalReconstructedTreeOurMethod.makeTree(seqs, mu_Var, 2*finalDistMat)\n",
     "    theirTree = makingOtherMethodTree.inferTreeFromSeqs(seqs, mu_Var)\n",
     "    theirTreeMatrix = np.array(pd.read_csv('otherMethodDistanceMatrix.csv').drop(columns='Unnamed: 0'))\n",
     "\n",
@@ -245,34 +246,27 @@
    "source": [
     "\n",
     "results = {}\n",
-    "sizes = [1000, 10000, 100000, 1000000]\n",
+    "# sizes = [1e3, 1e4, 1e5, 1e5, 1e6, 1e7, 1e8]\n",
+    "sizes = [1e7, 1e8]\n",
     "for size in sizes:\n",
-    "    for i in range(10):\n",
+    "    if size <= 1e6:\n",
+    "        num = 2\n",
+    "    else:\n",
+    "        num = 1\n",
+    "    for i in range(num):\n",
     "        try:\n",
     "            results[(size, i)] = experiment(size)\n",
     "        except:\n",
     "            print('something wrong')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{(1000, 0): (0.00035619459020910864, 8.549142612579875e-06),\n (1000, 1): (0.00020920992832054418, 2.9984396064715048e-05),\n (1000, 2): (0.0007750443125179252, 2.190992464274074e-05),\n (1000, 3): (0.0002779090235282911, 1.941172005101302e-05),\n (1000, 4): (0.00020902232773126333, 1.4395984758733754e-05),\n (1000, 5): (0.00030226258456940604, 8.541442827999191e-06),\n (1000, 6): (0.000986695461036352, 1.5012169022853152e-05),\n (1000, 7): (0.000163967988227894, 1.2156888211880515e-05),\n (1000, 8): (0.00034088740222716277, 2.086376956904998e-05),\n (1000, 9): (0.0005752483381987904, 1.228371821566004e-05),\n (10000, 0): (0.0005627266068707746, 0.0001923426091857371),\n (10000, 1): (0.00011323895458726328, 0.00020243125186152167),\n (10000, 2): (0.0002888598146499603, 0.00017405331432143435),\n (10000, 3): (0.00035850360153080296, 0.00020469797347921558),\n (10000, 4): (0.0004057968025926287, 0.00020417538732003926),\n (10000, 5): (0.0024379527560808795, 0.00019352074984190496),\n (10000, 6): (0.0004138482178257191, 0.00018694964530670857),\n (10000, 7): (0.0003518584092493322, 0.00018414097908999404),\n (10000, 8): (0.00013944597744893983, 0.0002155413367425074),\n (10000, 9): (0.00020920193917058522, 0.00019915133325296516),\n (100000, 0): (0.0019178045069480052, 0.0019604727416634394),\n (100000, 1): (0.00296015523028453, 0.0019574577992106596),\n (100000, 2): (0.0022458807121932068, 0.0019344564965959627),\n (100000, 3): (0.0015724189029826196, 0.0019749995818378017),\n (100000, 4): (0.0016192216611719608, 0.0019949564080097965),\n (100000, 5): (0.0015440437568310708, 0.0019618112913387456),\n (100000, 6): (0.0013107419625891098, 0.002001852415609582),\n (100000, 7): (0.00163204543436161, 0.0019855471770330053),\n (100000, 8): (0.0012583627913643816, 0.0019992491261600644),\n (100000, 9): (0.0014796341815695186, 0.0020075087462172792),\n (1000000, 0): (0.004433868482454886, 0.019398571833557365),\n (1000000, 1): (0.011701379284653132, 0.019482407962579336),\n (1000000, 2): (0.004751349243233928, 0.01928637862200628),\n (1000000, 3): (0.0048037334222323855, 0.019451419897397397),\n (1000000, 4): (0.006572386160532939, 0.019285502463140314),\n (1000000, 5): (0.005496582071851664, 0.019444073457518425),\n (1000000, 6): (0.005450496621720391, 0.019448844447940084),\n (1000000, 7): (0.005898000357987812, 0.019348581372110492),\n (1000000, 8): (0.0035093275760891703, 0.019447570453983945),\n (1000000, 9): (0.00466132516707835, 0.019401497007331642)}"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "results"
    ],
@@ -282,23 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000 0.00041964419565667375 0.00025887821297962773 1.6310915597722536e-05 6.388225340122438e-06\n",
-      "10000 0.0005281433080006886 0.0006495125547131904 0.0001957004580402028 1.13950677413055e-05\n",
-      "100000 0.0017540309140296015 0.00048488049555365294 0.001977831178367634 2.2653309088633314e-05\n",
-      "1000000 0.005727844838783466 0.0021470189716394717 0.019399484751756527 6.685153749186054e-05\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "for size in sizes:\n",
-    "    us = [results[(size, i)][0] for i in range(10)]\n",
-    "    them = [results[(size, i)][1] for i in range(10)]\n",
+    "    if size <= 1e6:\n",
+    "        num = 2\n",
+    "    else:\n",
+    "        num = 10\n",
+    "    us = [results[(size, i)][0] for i in range(num)]\n",
+    "    them = [results[(size, i)][1] for i in range(num)]\n",
     "    print(size, np.mean(us), np.std(us), np.mean(them), np.std(them))"
    ],
    "metadata": {
